# ustavshik-parser

./: .gitignore  LICENSE  README.md  parse_data.py  pyproject.toml  test_tidyup.py  ustav.py
data/: README.md  apostol.json  chasoslov.json  evangelie.json  kanonnik.json  pogrebenie.json  pravilnye-kanony.json  prichastnye-chasy.json  psaltyr.json
