[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ustavshik-parser"

version = "1.0.0"

description = "A utility to parse https://ustavshik.ru"
readme = "README.md"

requires-python = ">=3.10"

authors = [
  {name = "Mike Kroutikov", email = "pgmmpk@gmail.com" }
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: HTML Specialty Parsers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
  "lxml", "lxmlx"
]

[project.urls]
"Homepage" = "https://github.com/slavonic/ustavshik-parser"

